fix: remove extra space between page and body

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap');
 
-body {
+
+html, body {
     margin: 0;
+    padding: 0;
     background-color: #FFFFFF;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 body * {
@@ -15,6 +18,7 @@ body * {
 .nunito-font {
     font-family: Nunito Sans;
 }
+
 
 @media (max-width: 768px) {
     body {
@@ -1457,12 +1461,23 @@ body * {
     opacity: 5%;
 }
 
+.left-city-view {
+    width:100%
+}
+
+.right-city-view {
+    width:100%
+}
+
+
 .city-view-left {
+    width: 50%;
     transform: scaleX(-1);
     margin-top: -77px;
 }
 
 .city-view-right {
+    width: 50%;
     margin-top: -77px;
 }
 
